<resources>
    <string name="app_name">My Journal</string>
    <string name="error_message">An error occurred. Please, try again.</string>

    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="pref_server_label">Server</string>
    <string name="pref_server_key" translatable="false">server</string>
    <string name="pref_server_default" translatable="false">https://www.ilcrotonese.it</string>

    <string name="desc_post_thundbail">Post thundbail</string>

    <string name="title_activity_settings">Settings</string>

    <string name="post_not_found">Post not found</string>

    <string name="message_subscription_key" translatable="false">news</string>
    <string name="message_subscription_title">News subscription</string>
    <string name="message_subscription_on">On</string>
    <string name="message_subscription_off">Off</string>


</resources>
