<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:defaultValue="@string/pref_server_default"
        android:inputType="text"
        android:key="@string/pref_server_key"
        android:singleLine="true"
        app:iconSpaceReserved="false"
        android:title="@string/pref_server_label" />
    <SwitchPreference
        android:defaultValue="@bool/news_message_subscription"
        app:iconSpaceReserved="false"
        android:key="@string/message_subscription_key"
        android:summaryOff="@string/message_subscription_off"
        android:summaryOn="@string/message_subscription_on"
        android:title="@string/message_subscription_title" />
</PreferenceScreen>